--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -41,7 +41,7 @@ body, html {
     width: 148px;
     padding: 10px;
     border: solid 1.5px;
-    border-radius: 5px;
+    border-radius: 10px;
     font-weight: bold;
     cursor: pointer;
     font-size: 16px;
@@ -103,7 +103,8 @@ body, html {
 
 .alternador img {
     width: 148px;
-    height: 40px;
+    height: 39px;
+    cursor: pointer;
 }
 
 .divOnOff {
